Fix typo in default html head rss line, and adjust tests.

--- a/t/templates/expected.html
+++ b/t/templates/expected.html
@@ -4,7 +4,7 @@ Content-Type: text/xhtml; charset=UTF-8
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
-        <link rel="alternate" type="type="application/rss+xml" title="RSS" href="http://localhost/index.rss" />
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="http://localhost/index.rss" />
         <title>My Weblog   
         </title>
     </head>
