--- a/t/templates/data/head.html
+++ b/t/templates/data/head.html
@@ -2,7 +2,7 @@
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
-        <link rel="alternate" type="type="application/rss+xml" title="RSS" href="$url/index.rss" />
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="$url/index.rss" />
         <title>$blog_title $path_info_da $path_info_mo $path_info_yr
         </title>
     </head>
