--- a/t/templates/expected.html
+++ b/t/templates/expected.html
@@ -15,13 +15,12 @@ Content-Type: text/xhtml; charset=UTF-8
         <div>
 Lorem ipsum dolor sit amet ipso facto.Lorem ipsum dolor sit amet ipso
 facto.Lorem ipsum dolor sit amet ipso facto. Lorem ipsum dolor sit
-amet ipso facto.Lorem ipsum dolor sit amet ipso facto. 
+amet ipso facto.Lorem ipsum dolor sit amet ipso facto.
 
 Lorem ipso hoccer foer tyr wuz de ras cora dola tymon ipso hoc cer fuz
 de ramas cora dola tymon ipso hoccer. Lorem ipso foer tyr wuz de ramas
-cora dola tym ipso hor.
-</div>
-        <p>posted at: 11:11 | path: <a href="http://localhost/web">/web </a> | <a href="http://localhost/2007/11/11#2">permanent link to this entry</a></p>
+cora dola tym ipso hor.</div>
+        <p>posted at: 11:11 | path: <a href="http://localhost"> </a> | <a href="http://localhost/2007/11/11#2">permanent link to this entry</a></p>
         <h3>2006-07-19</h3>
         <h4><a name="1">Lorem ipsum</a></h4>
         <div>Lorem ipsum dolor sit amet ipso facto.Lorem ipsum dolor sit amet ipso
